# Cpp-Poker-Hand-Validator-and-Evaluator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  Readme.txt  main.cpp  pokerCompare.cpp  pokerCompare.h  pokerHandsGoogleTest.cpp  pokerHandsPrintTests.cpp  pokerHandsTests.cpp  printTests.cpp  readFile.cpp  readFile.h  simpleUnitTests.cpp  testAdvancedHandTests.txt  testBasicHand2Win.txt  testBasicInvalidFileOdd.txt  testBasicInvalidHandSize.txt  testBasicInvalidHandSizeCard.txt  testBasicInvalidHandSuit.txt  util.cpp  util.h
src/: CMakeLists.txt
src/headers/: CMakeLists.txt  pokerCore.h  readFile.h  util.h  writeFile.h
src/modules/: CMakeLists.txt
src/modules/main/: CMakeLists.txt  main.cpp
src/modules/pokerCore/: CMakeLists.txt  pokerCore.cpp  util.cpp
src/modules/readFile/: CMakeLists.txt  readFile.cpp
src/modules/writeFile/: CMakeLists.txt  writeFile.cpp
testFiles/: CMakeLists.txt
testFiles/advancedTestFiles/: CMakeLists.txt  testAdvancedHandTests.txt  testAdvancedMultipleDiffCases.txt  testAdvancedMultipleTies.txt  testUltimate.txt
testFiles/basicTestFiles/: CMakeLists.txt  testBasicAlgorithmCheck.txt  testBasicHandValues.txt  testBasicInvalidHandFace.txt  testBasicOriginal.txt  testBasicTie.txt  testBasicWrongSize.txt
tests/: CMakeLists.txt
tests/googleTests/: CMakeLists.txt  googleTests.cpp
tests/testModules/: CMakeLists.txt  simpleCoreTest.cpp
